--- a/index.html
+++ b/index.html
@@ -4,8 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="logo">
+            <img src="assets/Group 7.png" alt="logo" class="logo_img">
+            <div class="logo_name">ALEKSANDER <br> NEMOV</div>
+        </div>
+        <nav class="nav">
+            <ul class="nav_list">
+                <li class="nav_item">Проекты</li>
+                <li class="nav_item">Новости</li>
+                <li class="nav_item">Дневник</li>
+                <li class="nav_item">Контакты</li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <div class="main_card">
+            <img src="./assets/my_photo.png" alt="me" class="main_my_photo">
+            <div class="main_title">
+                <p class="main_about">Привет, я студент  группы ЭФБО-10-24. <br> Увлекаюсь веб-разработкой</p>
+                <button class="main_save_rez">СКАЧАТЬ РЕЗЮМЕ</button>
+            </div>
+        </div>
+        <div class="main_card_2">
+            <img src="./assets/nemov_img.png" alt="nemov" class="nemov">
+            <div class="skills_main">
+                <h2 class="skills_title">НАВЫКИ</h2>
+                <div class="skills">
+                    <div class="skill">
+                        <span>HTML/CSS</span>
+                        <div class="skill-line"><div style="width: 80%;"></div></div>
+                    </div>
+                    <div class="skill">
+                        <span>JavaScript</span>
+                        <div class="skill-line"><div style="width: 40%;"></div></div>
+                    </div>
+                    <div class="skill">
+                        <span>Bootstrap</span>
+                        <div class="skill-line"><div style="width: 60%;"></div></div>
+                    </div>
+                    <div class="skill">
+                        <span>Figma</span>
+                        <div class="skill-line"><div style="width: 70%;"></div></div>
+                    </div>
+                </div>
+            </div>
+            <img src="./assets/nemov_img.png" alt="nemov" class="nemov">
+        </div>
+    </main>
+    <footer class="footer"></footer>
 </body>
 </html>
