3 блок и его адаптив

--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
             </div>
             <img src="./assets/nemov_img.png" alt="nemov" class="nemov">
         </div>
+        <div class="main_card_3">
+            <h2 class="project_title">ПРОЕКТЫ</h2>
+            <div class="project">
+                <div onclick="location.href='https://canzas91.github.io/my--portfolio-project/'" class="project1">Первый проект</div>
+                <div onclick="location.href='https://canzas91.github.io/my-awesome-project/'" class="project1">Второй Проект</div>
+            </div>
+        </div>
     </main>
     <footer class="footer"></footer>
 </body>
