--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             </div>
         </div>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div>
+            <h3>developed by Alexander Nemov © 2024</h3>
+        </div>
+    </footer>
 </body>
 </html>
