--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="./assets/my_photo.png" alt="me" class="main_my_photo">
             <div class="main_title">
                 <p class="main_about">Привет, я студент  группы ЭФБО-10-24. <br> Увлекаюсь веб-разработкой</p>
-                <button class="main_save_rez">СКАЧАТЬ РЕЗЮМЕ</button>
+                <button class="main_save_rez" id="bt">СКАЧАТЬ РЕЗЮМЕ</button>
             </div>
         </div>
         <div class="main_card_2">
@@ -67,5 +67,6 @@
             <h3>developed by Alexander Nemov © 2024</h3>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
