--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
         </div>
         <nav class="nav">
             <ul class="nav_list">
-                <li class="nav_item">Проекты</li>
+                <li class="nav_item"><a class="nav_link" href="index.html">Проекты</a></li>
                 <li class="nav_item">Новости</li>
                 <li class="nav_item">Дневник</li>
                 <li class="nav_item">Контакты</li>
@@ -32,8 +32,24 @@
                     Решил начать изучение прям с самого начала, с курса по HTML. Курс прошёл быстро так как почти всё уже знал и некоторые видосы просто скипал.
                 </p>
             </div>
-            <div class="main_news_1"></div>
-            <div class="main_news_1"></div>
+            <div class="main_news_1">
+                <h2 class="news_title">НОВОСТЬ 2</h2>
+                <p class="news_text">
+                    Day 1
+                    Продолжел смотреть видосы по адаптиву и понял что есть много пробелов в знаниях и решил вернуться к курсу по CSS.
+                    Day 2
+                    Решил начать изучение прям с самого начала, с курса по HTML. Курс прошёл быстро так как почти всё уже знал и некоторые видосы просто скипал.
+                </p>
+            </div>
+            <div class="main_news_1">
+                <h2 class="news_title">НОВОСТЬ 3</h2>
+                <p class="news_text">
+                    Day 1
+                    Продолжел смотреть видосы по адаптиву и понял что есть много пробелов в знаниях и решил вернуться к курсу по CSS.
+                    Day 2
+                    Решил начать изучение прям с самого начала, с курса по HTML. Курс прошёл быстро так как почти всё уже знал и некоторые видосы просто скипал.
+                </p>
+            </div>
         </div>
     </main>
     <footer class="footer">
